# aws-sso-navigator

./: Cargo.toml  README.md  config.toml.example
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: aws.rs  config.rs  import.rs  main.rs  profile.rs  tui_tree.rs  ui.rs
tests/: integration_tests.rs
