[package]
name = "aws-sso-navigator"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1"
dirs = "6"
clap = { version = "4", features = ["derive"]}
skim = "0.20"
serde = { version = "1", features = ["derive"]}
toml = "0.9"
rust-ini = "0.21"
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"
